--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -49,6 +49,10 @@ function animateBioLink() {
   }
 }
 
-animateBioLink();
- 
+{% if site.bio.scrollAnimate %}
+
+    animateBioLink();
+
+{% endif %}
+
 </script>
